--- a/.travis.yml
+++ b/.travis.yml
@@ -1,57 +1,8 @@
 language: php
 
-php:
-  - 5.5
-  - 5.6
-
-env:
-  - TYPO3_BRANCH=TYPO3_6-2
-  - TYPO3_BRANCH=7.0.2
-  - TYPO3_BRANCH=7.1.0
-  - TYPO3_BRANCH=7.2.0
-  - TYPO3_BRANCH=7.3.1
-  - TYPO3_BRANCH=7.4.0
-  - TYPO3_BRANCH=master
-
-matrix:
-  include:
-    - php: 5.3
-      env: TYPO3_BRANCH=TYPO3_6-2
-    - php: 5.4
-      env: TYPO3_BRANCH=TYPO3_6-2
-  allow_failures:
-    - env: TYPO3_BRANCH=master
-  fast_finish: true
-
-cache:
-  directories:
-    - vendor
-    - $HOME/.composer/cache
-
 before_script:
-  - sudo apt-get install lynx
-  - npm install -g gulp
-  - npm install
-  - composer install
-  - cd ..
-  - git clone --branch $TYPO3_BRANCH --depth 1 https://github.com/TYPO3/TYPO3.CMS.git typo3_core
-  - mv typo3_core/* .
-  - composer install
-  - mkdir -p uploads typo3temp typo3conf/ext
-  - mv newsletter typo3conf/ext/
-  - export typo3DatabaseName="typo3";
-  - export typo3DatabaseHost="localhost";
-  - export typo3DatabaseUsername="root";
-  - export typo3DatabasePassword="";
+  - ls
+
 
 script:
-  - cd typo3conf/ext/newsletter && gulp && cd ../../../
-  - ./bin/phpunit --coverage-clover=unit-tests-coverage.clover --colors -c typo3conf/ext/newsletter/Tests/Build/UnitTests.xml
-  - ./bin/phpunit --coverage-clover=functional-tests-coverage.clover --colors -c typo3conf/ext/newsletter/Tests/Build/FunctionalTests.xml
-
-after_script:
-  - echo "Uploading code coverage results";
-  - cp -R typo3conf/ext/newsletter/.git .
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover unit-tests-coverage.clover
-  - php ocular.phar code-coverage:upload --format=php-clover functional-tests-coverage.clover
+  - lynx --help
