--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     "statistics"
   ],
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.2.0",
     "ext-dom": "*",
     "ext-openssl": "*",
-    "typo3/cms-backend": "^7.6 || ^8.7",
-    "typo3/cms-core": "^7.6 || ^8.7",
-    "typo3/cms-extbase": "^7.6 || ^8.7",
-    "typo3/cms-fluid": "^7.6 || ^8.7",
-    "typo3/cms-scheduler": "^7.6 || ^8.7"
+    "typo3/cms-backend": "^9.5",
+    "typo3/cms-core": "^9.5",
+    "typo3/cms-extbase": "^9.5",
+    "typo3/cms-fluid": "^9.5",
+    "typo3/cms-scheduler": "^9.5"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.1"
